--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,5 +28,5 @@ phases:
 
   build:
     commands:
-      - pip install sagemaker
+      - pip install sagemaker tensorflow
       - python train_local.py entry_point=$ENTRY_POINT src_dir=$SOURCE_DIR input_s3=$INPUT_PATH
