--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    JOB_NAME: train-$CODEBUILD_START_TIME
+    SOURCE_VERSION: $CODEBUILD_RESOLVED_SOURCE_VERSION
     ENTRY_POINT: "mnist.py"
     SOURCE_DIR: "src"
     INPUT_PATH: "s3://sagemaker-us-west-2-373011628954/data/DEMO-mnist"
@@ -27,4 +27,4 @@ phases:
   build:
     commands:
       - pip install sagemaker tensorflow
-      - python train_local.py --entry_point $ENTRY_POINT --src_dir $SOURCE_DIR --input_s3 $INPUT_PATH
+      - python train_local.py --entry_point $ENTRY_POINT --src_dir $SOURCE_DIR --input_s3 $INPUT_PATH --version $SOURCE_VERSION
