--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,8 @@ version: 0.2
 
 env:
   variables:
-    SOURCE_VERSION: $(echo $CODEBUILD_RESOLVED_SOURCE_VERSION)
-    REPO_NAME: $(echo $CODEBUILD_SOURCE_REPO_URL)
+    # SOURCE_VERSION: $(echo $CODEBUILD_RESOLVED_SOURCE_VERSION)
+    # REPO_NAME: $(echo $CODEBUILD_SOURCE_REPO_URL)
     ENTRY_POINT: "mnist.py"
     SOURCE_DIR: "src"
     INPUT_PATH: "s3://sagemaker-us-west-2-373011628954/data/DEMO-mnist"
@@ -28,4 +28,4 @@ phases:
   build:
     commands:
       - pip install sagemaker tensorflow
-      - python train_local.py --entry_point $ENTRY_POINT --src_dir $SOURCE_DIR --input_s3 $INPUT_PATH --repo $REPO_NAME --version $SOURCE_VERSION
+      - python train_local.py --entry_point $ENTRY_POINT --src_dir $SOURCE_DIR --input_s3 $INPUT_PATH --repo $CODEBUILD_SOURCE_REPO_URL --version $CODEBUILD_RESOLVED_SOURCE_VERSION
