--- a/buildspec.yml
+++ b/buildspec.yml
@@ -28,4 +28,4 @@ phases:
   build:
     commands:
       - pip install sagemaker tensorflow
-      - python train_local.py --entry_point $ENTRY_POINT --src_dir $SOURCE_DIR --input_s3 $INPUT_PATH --repo $REPO_NAME --version $CODEBUILD_RESOLVED_SOURCE_VERSION
+      - python test_train.py --entry_point $ENTRY_POINT --src_dir $SOURCE_DIR --input_s3 $INPUT_PATH --repo $REPO_NAME --version $CODEBUILD_RESOLVED_SOURCE_VERSION
